--- a/style.css
+++ b/style.css
@@ -5,3 +5,19 @@
     color: blue;
     background-color: red
 }
+
+.divbg {
+    background-color: red
+}
+.btnstyle {
+    color:white;
+    background-color:blue
+}
+
+.divbg {
+    background-color: red
+}
+.btnstyle {
+    color:red;
+    background-color:green
+}
