--- a/style.css
+++ b/style.css
@@ -5,4 +5,19 @@
     color: blue;
     background-color: red
 }
+.btnstyle1 {
+    color: white;
+    background-color: blue
+}
+.btnstyle2 {
+    color: yellow;
+    background-color: green
+}
+.btnstyle3 {
+    color: pink;
+    background-color: violet
+}
+
+
+
 
